# Classroom

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  REVIEW.md  attio_inspired_design_system.md  attio_inspired_tokens.css  build.sh  deploy.sh  dev.sh  docker-compose.prod.yml  docker-compose.yml  go.mod  go.sum  implementation.md  railway.json
.opencode/plugin/: sync-models.ts
.planning/: 02-REVIEW.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  DB_AUDIT.md  DEPLOYMENT_SAFETY.md  FORCE_REFRESH_CASCADE_SOLUTION.md  INTEGRATIONS.md  RATE_LIMIT_SOLUTION.md  RESOURCE_EXHAUSTION_AUDIT.md  REVIEW_TASK6_KICKED_DETECTION.md  SESSION_AUDIT.md  SESSION_POOL_DESIGN.md  STACK.md  STATE_AUDIT.md  STRUCTURE.md  TESTING.md  WARWICK_SESSION_AUDIT.md
.planning/phases/02-code-review-command/: 02-REVIEW-FIX.md  02-REVIEW-IMPL.md  02-REVIEW.md
.planning/phases/02-pagination-component/: 02-REVIEW.md
.planning/solutions/: concurrent-login-fix.md
cmd/server/: main.go
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs
crates/db/tests/: repository_tests.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs  room_manager.rs
crates/warwick/: Cargo.toml
crates/warwick/src/: auth.rs  client.rs  lib.rs
crates/warwick/tests/: warwick_client_tests.rs
docs/: UX_PLAN.md
externalclassroom/: studentprofile.html
internal/api/: batch_attendance_test.go  favourite_handlers.go  handlers.go  metrics_test.go  routes.go  teacher_handlers.go  websocket.go  websocket_test.go
internal/cache/: cache.go  cache_test.go
internal/db/: attendance_report_repository.go  attendance_report_repository_test.go  attendance_report_unit_test.go  dashboard_repository.go  dashboard_repository_test.go  db.go  favourite_repository.go  repository.go  session_checkin_repository.go  session_checkin_repository_test.go
internal/domain/: classroom.go  client.go  dashboard.go  dashboard_test.go  room.go  room_test.go
internal/metrics/: metrics.go
internal/middleware/: ratelimit.go  ratelimit_test.go
internal/service/: data_refresher.go  report_hydrator.go  report_hydrator_test.go  report_persister.go  report_persister_test.go  room_manager.go  session_prewarmer.go  session_prewarmer_test.go
internal/warwick/: REVIEW-step3.md  auth.go  auth_test.go  classroom_client.go  classroom_client_db_test.go  classroom_client_fetch_test.go  classroom_client_report_test.go  client.go  client_test.go  dashboard_pool_test.go  datatable.go  report_client.go  report_client_test.go  report_db_source.go  report_db_source_test.go  session_pool.go  session_pool_test.go  transport.go  transport_test.go
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.jsx  App.tsx  index.css
(+77 files in other folders)
