[workspace]
members = [
    "crates/core",
    "crates/db",
    "crates/warwick",
    "crates/server",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
cookie = "0.18"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
