[package]
name = "qr-command-center-warwick"
version = "0.1.0"
edition = "2021"

[dependencies]
qr-command-center-core = { path = "../core" }
anyhow = { workspace = true }
async-trait = "0.1"
chrono = { workspace = true }
cookie = { workspace = true }
reqwest = { workspace = true, features = ["cookies"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "1.0"
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
wiremock = "0.6"
